cmake_minimum_required(VERSION 3.15)
project(cplusplus_playground)

set(CMAKE_CXX_STANDARD 14)

SET(CMAKE_CXX_FLAGS "-pthread")

add_executable(cplusplus_playground rvo.cc)
add_executable(setw io_manip.cc)
add_executable(smart_ptr smart_ptr.cc)
add_executable(move_semantics move_semantics.cc)
add_executable(brace_init brace_init.cc)
add_executable(copy_and_swap copy_and_swap.cc)
add_executable(rule_of_three rule_of_three.cc)
add_executable(implicit_explicit implicit_explicit.cc)
add_executable(call_parent_constructor call_parent_constructor.cc)
add_executable(template_function template_function.cc)
add_executable(operator_overload operator_overload.cc)
add_executable(friend friend.cc)
add_executable(inheritance_control inheritance_control.cc)
#add_executable(access_control access_control.cc)
add_executable(thread_demo thread_demo.cc)
add_executable(cast cast.cc)
add_executable(virtual_dtor virtual_dtor.cc)