cmake_minimum_required(VERSION 3.15)
project(cplusplus_playground)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(ctor)
add_subdirectory(dtor)
add_subdirectory(concurrent)
add_subdirectory(misc)
add_subdirectory(STL)
add_subdirectory(type_system)
add_subdirectory(template_system)
add_subdirectory(io)
add_subdirectory(lrvalue_ref_lifetime)
add_subdirectory(enum)
add_subdirectory(init)
add_subdirectory(lambda)

add_executable(tmp aa_tmp.cc)
add_executable(tmp2 aa_tmp2.cc)
add_executable(env env.cc)